Fix/profile overflow (#250)
* Don't overflow long text in profile dropdown button

* Refactor some code just to look better and make more DRY

--- a/src/assets/stylesheets/bmx.scss
+++ b/src/assets/stylesheets/bmx.scss
@@ -253,3 +253,7 @@ hr {
 .edit-profile {
   font-size: 12px;
 }
+
+.profile-dropdown {
+  white-space: normal;
+}
